	* add work-around for bug in windows vista and earlier in GetOverlappedResult
	* fix traversal algorithm leak in DHT
	* fix string encoding conversions on windows
	* take torrent_handle::query_pieces into account in torrent_handle::statue()
	* honor trackers responding with 410
	* fixed merkle tree torrent creation bug
	* fixed crash with empty url-lists in torrent files
	* added missing max_connections() function to python bindings

0.16.7 release

	* fix string encoding in error messages
	* handle error in read_piece and set_piece_deadline when torrent is removed
	* DHT performance improvement
	* attempt to handle ERROR_CANT_WAIT disk error on windows
	* improve peers exchanged over PEX
	* fixed rare crash in ut_metadata extension
	* fixed files checking issue
	* added missing pop_alerts() to python bindings
	* fixed typos in configure script, inversing some feature-enable/disable flags
	* added missing flag_update_subscribe to python bindings
	* active_dht_limit, active_tracker_limit and active_lsd_limit now interpret -1 as infinite

0.16.6 release

	* fixed verbose log error for NAT holepunching
	* fix a bunch of typos in python bindings
	* make get_settings available in the python binding regardless of deprecated functions
	* fix typo in python settings binding
	* fix possible dangling pointer use in peer list
	* fix support for storing arbitrary data in the DHT
	* fixed bug in uTP packet circle buffer
	* fix potential crash when using torrent_handle::add_piece
	* added missing add_torrent_alert to python binding

0.16.5 release

	* udp socket refcounter fix
	* added missing async_add_torrent to python bindings
	* raised the limit for bottled http downloads to 2 MiB
	* add support for magnet links and URLs in python example client
	* fixed typo in python bindings' add_torrent_params
	* introduce a way to add built-in plugins from python
	* consistently disconnect the same peer when two peers simultaneously connect